flux/apps/tailscale/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: tailscale
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "jellyfin.nstnr.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin-clusterip
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
